--- a/index.html
+++ b/index.html
@@ -52,6 +52,74 @@
         </div>
     </section>
 
+    <section class="course">
+        <h1>Course We Offer</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+
+        <div class="row">
+            <div class="course-col">
+                <h3>Beginner</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, 
+                    adipisicing elit. Provident, magnam.
+                </p>
+            </div>
+            <div class="course-col">
+                <h3>Intermediate</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, 
+                    adipisicing elit. Provident, magnam.
+                </p>
+            </div>
+            <div class="course-col">
+                <h3>Advance</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, 
+                    adipisicing elit. Provident, magnam.
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="campus">
+        <h1>Our Global Campus</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, recusandae.
+        </p>
+
+        <div class="row">
+            <div class="campus-col">
+                <img src="img/erika-fletcher-MZxqc6n9qCw-unsplash.jpg" alt="">
+                <div class="layer">
+                    <h3>JAKARTA</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="img/erika-fletcher-MZxqc6n9qCw-unsplash.jpg" alt="">
+                <div class="layer">
+                    <h3>BANDUNG</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="img/erika-fletcher-MZxqc6n9qCw-unsplash.jpg" alt="">
+                <div class="layer">
+                    <h3>BOGOR</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
     <script>
 
         var navLinks = document.getElementById("navLinks");
