--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
         </div>
     </section>
 
-
+    <section class="facilities">
+        <h1>Our Facilities</h1>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, accusamus!
+        </p>
+    </section>
 
 
 
